--- a/first.html
+++ b/first.html
@@ -67,6 +67,27 @@
         </div>
       </nav>
 
+      <!-- this is about section -->
+      <div class="about-container">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-md-9 py-5 text-white">
+                    <h4 class="text-first">Golam Ali</h4>
+                    <p>Student, Flutter Developer</p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, distinctio blanditiis. Adipisci perferendis earum sapiente ipsa, dicta laborum ea, distinctio labore nisi eum nemo omnis ullam!</p>
+
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum nobis illum vel adipisci architecto? Voluptate, ad! Mollitia quia animi numquam, velit, quo neque maxime, corrupti et commodi facilis qui ex?</p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, error. Quod pariatur consectetur quas officia dolorem quos veniam quam, eligendi ipsam doloremque, vel porro inventore, qui possimus expedita mollitia maxime ullam laboriosam. Sed, sit accusamus?</p>
+
+                </div>
+                <div class="col-md-3">
+                    <img src="/image/profile.png" alt="Golam Ali" class="img-fluid rounded circle border border-dark p-4">
+                </div>
+            </div>
+        </div>
+      </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
