--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Young+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Young+Serif&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <title>Ali Sarwar</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -19,7 +20,7 @@
 
 <body>
 
-    <!-- this is banner section -->
+    <!-- this is BANNER section -->
     <section class="banner-container container-fluid">
         <div class="row vh-100">
             <div class="col-md-9 banner-column m-auto text-center p-4">
@@ -29,65 +30,126 @@
         </div>
     </section>
 
-    <!-- this is navbar section -->
-
+    <!-- this is NAVBAR section -->
     <!-- <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark"> -->
-    <nav class="navbar navbar-expand-lg bg-body-tartiary navbar-container">
+    <!-- <nav class="navbar navbar-expand-lg bg-body-tartiary navbar-container"> -->
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-container">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- here me is margin thats why all navbar left side -->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#About">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Education">Education</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Project">Project</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Portfolio">Porfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Gallery">Gallery</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#Contacts">Contacs</a>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-          </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- here me is margin thats why all navbar left side -->
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#About">About</a>
+                    </li>
+                    <!-- <li class="nav-item">
+                    <a class="nav-link" href="#About">About</a>
+                </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Education">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Project">Project</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Portfolio">Porfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Gallery">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Contacts">Contacs</a>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
         </div>
-      </nav>
+    </nav>
 
-      <!-- this is about section -->
-      <div class="about-container">
+    <!-- this is ABOUT section -->
+    <div class="about-container" id="About">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-9 py-5 text-white">
                     <h4 class="text-first">Golam Ali</h4>
                     <p>Student, Flutter Developer</p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, distinctio blanditiis. Adipisci perferendis earum sapiente ipsa, dicta laborum ea, distinctio labore nisi eum nemo omnis ullam!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, distinctio blanditiis. Adipisci
+                        perferendis earum sapiente ipsa, dicta laborum ea, distinctio labore nisi eum nemo omnis ullam!
+                    </p>
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum nobis illum vel adipisci architecto? Voluptate, ad! Mollitia quia animi numquam, velit, quo neque maxime, corrupti et commodi facilis qui ex?</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum nobis illum vel adipisci
+                        architecto? Voluptate, ad! Mollitia quia animi numquam, velit, quo neque maxime, corrupti et
+                        commodi facilis qui ex?</p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, error. Quod pariatur consectetur quas officia dolorem quos veniam quam, eligendi ipsam doloremque, vel porro inventore, qui possimus expedita mollitia maxime ullam laboriosam. Sed, sit accusamus?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, error. Quod pariatur
+                        consectetur quas officia dolorem quos veniam quam, eligendi ipsam doloremque, vel porro
+                        inventore, qui possimus expedita mollitia maxime ullam laboriosam. Sed, sit accusamus?</p>
 
                 </div>
-                <div class="col-md-3">
-                    <img src="/image/profile.png" alt="Golam Ali" class="img-fluid rounded circle border border-dark p-4">
+                <div class="col-md-3 mb-4">
+                    <img src="/image/profile.png" alt="Golam Ali"
+                        class="img-fluid rounded circle border border-dark p-4">
                 </div>
             </div>
         </div>
-      </div>
+    </div>
+
+    <!-- this is EDUCATION section -->
+    <div class="education-container">
+        <div class="container" id="Education">
+            <div class="row text-center">
+                <div class="col py-4">
+                    <h2 class="redtype-color">Education</h2>
+                </div>
+            </div>
+
+
+            <div class="row py-4 my-4 align-items-center justify-content-center">
+                <div class="col-md-2 pb-3">
+                    <div class="cirCle text-center text-white">
+                        <p class="py-5">Jan, 2012 <br>
+                        Dec,2015
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-9">
+                    <div class="card ml-3">
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium molestias, dolor delectus eligendi!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row py-4 my-4 align-items-center justify-content-center">
+                <div class="col-md-2 pb-3">
+                    <div class="cirCle text-center text-white">
+                        <p class="py-5">Jan, 2012 <br>
+                        Dec,2015
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-md-9">
+                    <div class="card ml-3">
+                        <div class="card-body">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium molestias, dolor delectus eligendi!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
