--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <a class="nav-link" href="#Project">Project</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Portfolio">Porfolio</a>
+                        <a class="nav-link" href="#Portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#Gallery">Gallery</a>
@@ -149,6 +149,125 @@
             </div>
         </div>
     </div>
+
+    <!-- this is PROJECT section -->
+    <div class="project-container">
+        <div class="container mb-4" id="Project">
+            <div class="row">
+                <div class="col py-5">
+                    <h3 class="text-center text-white">Project</h3>
+                </div>
+            </div>
+            <div class="row p-4">
+                <div class="col-md-3">
+                    <img src="/image/project1.jpg" class="img-fluid" alt="">
+                    <a href="" class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, exercitationem!</a>
+                    <p>10.45</p>
+                </div>
+
+                <div class="col-md-3">
+                    <img src="/image/project2.jpg" class="img-fluid" alt="">
+                    <a href="" class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, exercitationem!</a>
+                    <p>10.45</p>
+                </div>
+
+                <div class="col-md-3">
+                    <img src="/image/project1.jpg" class="img-fluid" alt="">
+                    <a href="" class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, exercitationem!</a>
+                    <p>10.45</p>
+                </div>
+
+                <div class="col-md-3">
+                    <img src="/image/project2.jpg" class="img-fluid" alt="">
+                    <a href="" class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, exercitationem!</a>
+                    <p>10.45</p>
+                </div>
+            </div>
+
+            <div class="row p-4">
+                <div class="col-md-3">
+                    <img src="/image/project1.jpg" class="img-fluid" alt="">
+                    <a href="" class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, quod.</a>
+                    <p>12.44</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="/image/project1.jpg" class="img-fluid" alt="">
+                    <a href="" class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, quod.</a>
+                    <p>12.44</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="/image/project1.jpg" class="img-fluid" alt="">
+                    <a href="" class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, quod.</a>
+                    <p>12.44</p>
+                </div>
+                <div class="col-md-3">
+                    <img src="/image/project1.jpg" class="img-fluid" alt="">
+                    <a href="" class="text-white">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, quod.</a>
+                    <p>12.44</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!-- this is PORTFOLIO section -->
+    <div class="container" id="Portfolio">
+        <div class="row p-2">
+            <div class="col text-center">
+                <h2 class="redtype-color">Portfolio</h2>
+            </div>
+        </div>
+
+        <div class="row py-5">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/port1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/port1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/port1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row py-5">
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/port1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/port1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <img src="/image/port1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 
 
 
