--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
     </div>
 
     <!-- this is PORTFOLIO section -->
+    <div class="portfolio-container">
     <div class="container" id="Portfolio">
         <div class="row p-2">
             <div class="col text-center">
@@ -222,25 +223,29 @@
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <img src="/image/port1.jpg" alt="">
+                        <img src="/image/port1.jpg" class="img-fluid alt="">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <img src="/image/port1.jpg" alt="">
+                        <img src="/image/port1.jpg" class="img-fluid alt="">
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
                     <div class="card-body">
-                        <img src="/image/port1.jpg" alt="">
+                        <img src="/image/port1.jpg" class="img-fluid alt="">
                     </div>
                 </div>
             </div>
         </div>
+
+        <p class="placeholder-wave">
+            <span class="placeholder col-12"></span>
+          </p>
 
         <div class="row py-5">
             <div class="col-md-4">
@@ -265,8 +270,51 @@
                 </div>
             </div>
         </div>
+     </div>
     </div>
 
+    <!-- this is CONTACT section -->
+
+    <div class="form-container">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col text-center text-white m-auto">
+                    <h2 class="font-weight-bolder">It was a bumpy ride</h2>
+                    <p>But dreams have a tendency to play hard to get right</p>
+                </div>
+            </div>
+
+            <div class="row py-4">
+                <div class="col-sm border mr-1 text-center border-light text-white">
+                    <span style="font-size: 72px;">29</span>
+                    <h4>Failed Attemps</h4>
+                </div>
+
+                <div class="col-sm border mr-1 text-center border-light text-white">
+                    <span style="font-size: 72px;">29</span>
+                    <h4>Failed Attemps</h4>
+                </div>
+
+                <div class="col-sm border mr-1 text-center border-light text-white">
+                    <span style="font-size: 72px;">29</span>
+                    <h4>Failed Attemps</h4>
+                </div>
+
+                <div class="col-sm border mr-1 text-center border-light text-white">
+                    <span style="font-size: 72px;">29</span>
+                    <h4>Failed Attemps</h4>
+                </div>
+            </div>
+
+            <div class="row py-5">
+                <div class="col text-center text-white m-auto">
+                    <h2 class="font-weight-bolder">Get in Touch</h2>
+                    <p>I can be totally stalked online. Give me a shout-out.</p>
+                </div>
+            </div>
+            
+        </div>
+    </div>
     
 
 
