--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
                  <div class="row pb-4">
                     <div class="col">
-                        <button class="btn bg-redtype py-2 text-white">Send Message</button>
+                        <button class="btn btn-danger py-2 text-white">Send Message</button>
                     </div>
                  </div>
                  
