nedd more works

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                         inventore, qui possimus expedita mollitia maxime ullam laboriosam. Sed, sit accusamus?</p>
 
                 </div>
-                <div class="col-md-3 mb-4">
-                    <img src="/image/profile.png" alt="Golam Ali"
+                <div class="col-md-3 mb-5 mt-5">
+                    <img src="/image/prop1.png" alt="Golam Ali"
                         class="img-fluid rounded circle border border-dark p-4">
                 </div>
             </div>
