more works need

--- a/index.html
+++ b/index.html
@@ -90,17 +90,18 @@
                     <h4 class="text-first" style="font-size: 35px;">Golam Ali</h4>
                     <p style="text-shadow: 0 0 5px #000000; font-size: 20px;">Student, Flutter Developer</p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, distinctio blanditiis. Adipisci
-                        perferendis earum sapiente ipsa, dicta laborum ea, distinctio labore nisi eum nemo omnis ullam!
+                    <p>Hello, there.. This is Golam Ali. <br>
+                        Currently, I am pursuing my B.Sc. in Bangladesh Army International University of Science and Technology (BAIUST)
+                    </p>
+                    <p>
+                        Have experience in programming languages and solving problems. Also, participated in the MIST Independence Day Programming Contest, 2023. Completed Four months of internship(Communication) from Youth School for Social Entrepreneurs (YSSE).
                     </p>
 
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum nobis illum vel adipisci
-                        architecto? Voluptate, ad! Mollitia quia animi numquam, velit, quo neque maxime, corrupti et
-                        commodi facilis qui ex?</p>
+                    <p>I'm passionate about creating beautiful, functional, and innovative mobile applications, and my favorite tool for this craft is Flutter. I'm on a mission to turn ideas into user-friendly and visually stunning mobile experiences.</p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, error. Quod pariatur
+                    <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, error. Quod pariatur
                         consectetur quas officia dolorem quos veniam quam, eligendi ipsam doloremque, vel porro
-                        inventore, qui possimus expedita mollitia maxime ullam laboriosam. Sed, sit accusamus?</p>
+                        inventore, qui possimus expedita mollitia maxime ullam laboriosam. Sed, sit accusamus?</p> -->
 
                 </div>
                 <div class="col-md-3 mb-5 mt-3">
@@ -125,8 +126,8 @@
             <div class="row py-4 my-4 align-items-center justify-content-center">
                 <div class="col-md-2 pb-3">
                     <div class="circle-edu text-center text-white">
-                        <p class="py-5">Jan, 2012 <br>
-                            Dec,2015
+                        <p class="py-5">Jan, 2019 <br>
+                            March,2024
                         </p>
                     </div>
                 </div>
@@ -134,12 +135,17 @@
                 <div class="col-md-9">
                     <div class="card ml-3">
                         <div class="card-body">
-                            <p class="education-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-                                debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita
-                                vitae minima
-                                tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad
-                                dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium
-                                molestias, dolor delectus eligendi!</p>
+                            <p class="education-text"> <b>
+                                Banglesh Army International University of Science and Technology (BAIUST).
+                                </b>
+                                <br>
+                                Cumilla, Bangladesh
+                                <br> <br>
+                                Bachelor of Science in Computer Science and Engineering (B.Sc)
+                                <br>
+                                CGPA:
+                            </p>
+                            <!-- <p class="education-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium molestias, dolor delectus eligendi!</p> -->
                         </div>
                     </div>
                 </div>
@@ -148,8 +154,8 @@
             <div class="row py-4 my-4 align-items-center justify-content-center">
                 <div class="col-md-2 pb-3">
                     <div class="circle-edu text-center text-white">
-                        <p class="py-5">Jan, 2012 <br>
-                            Dec,2015
+                        <p class="py-5">Jan, 2016 <br>
+                            Dec,2019
                         </p>
                     </div>
                 </div>
@@ -157,12 +163,19 @@
                 <div class="col-md-9">
                     <div class="card ml-3">
                         <div class="card-body">
-                            <p class="education-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-                                debitis, voluptatem
-                                excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima
-                                tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad
-                                dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium
-                                molestias, dolor delectus eligendi!</p>
+                            <p class="education-text"> <b>
+                                Cumilla Govt. College </b> <br>
+                                HSC <br>
+                                GPA:   <br>
+                                May, 2016 - June, 2019
+                                <br><br> <b>
+                                Ibn Taimiya School and College </b> <br>
+                                SSC <br>
+                                GPA:
+                                January, 2014 - April, 2016
+
+                            </p>
+                            <!-- <p class="education-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium molestias, dolor delectus eligendi!</p> -->
                         </div>
                     </div>
                 </div>
@@ -171,16 +184,6 @@
     </div>
 
     <!-- this is SKILLS section -->
-
-    <!-- <div class="education-container mt-4">
-        <div class="container mb-4" id="Education">
-    <div class="row text-center">
-        <div class="col py-5">
-            <h3 class="rededutype-color">Education</h3>
-        </div>
-    </div> -->
-
-
     <div class="skills-container mt-4" id="Skills">
         <div class="container mb-2" id="Skills">
             <div class="row text-center">
@@ -190,15 +193,18 @@
             </div>
             <div class="skills">
                 <div class="column">
-                    <h2>Programming Skills</h2>
+                    <h2> <b> Programming Skills </b> </h2>
                     <ul class="skills-list">
                         <li>C</li>
                         <li>C++</li>
                         <li>Dart</li>
+                        <li>Python</li>
+                        <li>C#</li>
+                        <li>JavaScript</li>
                     </ul>
                 </div>
                 <div class="column">
-                    <h2>Frontend</h2>
+                    <h2> <b> Frontend </b> </h2>
                     <ul class="skills-list">
                         <li>Flutter</li>
                         <li>HTML</li>
@@ -206,22 +212,26 @@
                     </ul>
                 </div>
                 <div class="column">
-                    <h2>Tools</h2>
+                    <h2> <b> Software Tools </b> </h2>
                     <ul class="skills-list">
-                        <li>Visual Studio</li>
                         <li>Android Studio</li>
+                        <li>Visual Studio Code</li>
+                        <li>Github</li>
+                        <li>Postman</li>
+                        <li>Proteus</li>
+                        <li>SWI-Prolog</li>
+                        <li>Arduino</li>
                     </ul>
                 </div>
             </div>
 
             <div class="container">
-                <h1 style="text-align: center;">Remember</h1>
+                <h3 style="text-align: center;">Remember</h3>
                 <div class="slider-container">
                     <div class="slider">
                         <div class="slide">Eat</div>
                         <div class="slide">Code</div>
                         <div class="slide">Sleep</div>
-
                     </div>
                 </div>
             </div>
@@ -343,9 +353,9 @@
                     </div>
                 </div>
 
-                <p class=" placeholder-wave">
+                <!-- <p class=" placeholder-wave">
                     <span class="placeholder col-12"></span>
-                </p>
+                </p> -->
 
                 <div class="row py-5">
                     <div class="col-md-4">
