--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Young+Serif&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&family=Tilt+Neon&family=Young+Serif&display=swap" rel="stylesheet">
 
 
     <link rel="stylesheet" href="/css/style.css">
@@ -135,23 +136,23 @@
                 <div class="col-md-9">
                     <div class="card ml-3">
                         <div class="card-body">
-                            <p class="education-text"> <b>
+                            <h5 class="education-text"> <b>
                                 Banglesh Army International University of Science and Technology (BAIUST).
                                 </b>
-                                <br>
+                            </h5>
                                 Cumilla, Bangladesh
-                                <br> <br>
+                                <br>
                                 Bachelor of Science in Computer Science and Engineering (B.Sc)
                                 <br>
-                                CGPA:
-                            </p>
+                                CGPA: 3.83
+                            <br>
                             <!-- <p class="education-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium molestias, dolor delectus eligendi!</p> -->
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="row py-4 my-4 align-items-center justify-content-center">
+            <div class="row py-4 mb-4 align-items-center justify-content-center">
                 <div class="col-md-2 pb-3">
                     <div class="circle-edu text-center text-white">
                         <p class="py-5">Jan, 2016 <br>
@@ -163,18 +164,20 @@
                 <div class="col-md-9">
                     <div class="card ml-3">
                         <div class="card-body">
-                            <p class="education-text"> <b>
-                                Cumilla Govt. College </b> <br>
+                            <h5 class="education-text"> <b>
+                                Cumilla Govt. College </b>
+                            </h5>
                                 HSC <br>
                                 GPA:   <br>
                                 May, 2016 - June, 2019
-                                <br><br> <b>
-                                Ibn Taimiya School and College </b> <br>
-                                SSC <br>
-                                GPA:
+                                <br><br> 
+                            <h5 class="education-text"> <b>
+                                Ibn Taimiya School and College </b> 
+                            </h5>
+                                SSC: <br>
+                                GPA: <br>
                                 January, 2014 - April, 2016
 
-                            </p>
                             <!-- <p class="education-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium molestias, dolor delectus eligendi!</p> -->
                         </div>
                     </div>
@@ -193,7 +196,7 @@
             </div>
             <div class="skills">
                 <div class="column">
-                    <h2> <b> Programming Skills </b> </h2>
+                    <h2> <b class="skills-text"> Programming Skills </b> </h2>
                     <ul class="skills-list">
                         <li>C</li>
                         <li>C++</li>
@@ -204,7 +207,7 @@
                     </ul>
                 </div>
                 <div class="column">
-                    <h2> <b> Frontend </b> </h2>
+                    <h2> <b class="skills-text"> Frontend </b> </h2>
                     <ul class="skills-list">
                         <li>Flutter</li>
                         <li>HTML</li>
@@ -212,7 +215,7 @@
                     </ul>
                 </div>
                 <div class="column">
-                    <h2> <b> Software Tools </b> </h2>
+                    <h2> <b class="skills-text"> Software Tools </b> </h2>
                     <ul class="skills-list">
                         <li>Android Studio</li>
                         <li>Visual Studio Code</li>
@@ -387,7 +390,7 @@
         <!-- this is CONTACT section -->
         <div class="form-container" id="Contacts">
             <div class="container">
-                <div class="row py-5">
+                <!-- <div class="row py-5">
                     <div class="col text-center text-white m-auto">
                         <h2 class="font-weight-bolder">It was a bumpy ride</h2>
                         <p>But dreams have a tendency to play hard to get right</p>
@@ -414,21 +417,26 @@
                         <span style="font-size: 72px;">29</span>
                         <h4>Failed Attemps</h4>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row py-5">
                     <div class="col text-center text-white m-auto">
-                        <h2 class="font-weight-bolder">Get in Touch</h2>
-                        <p>I can be totally stalked online. Give me a shout-out.</p>
+                        <h2 class="redcontype-color font-weight-bolder">Get in Touch</h2>
+                        <p class="text-only">I can be totally stalked online. Give me a shout-out.</p>
                     </div>
                 </div>
 
-                <div class="row pb-4">
+                <div class="row pb-2">
                     <div class="col text-white">
-                        <h5>Shoot a message!!!</h5>
+                        <h4>✔ Shoot a message & call...!!!</h4>
+                        <p> &#128231; alicsebaiust@gmail.com <br>
+                            &#128222; 01521-350574 <br>
+                            &#128222; 01623-630790 <br>
+                            &#127968; Cumilla, Bangladesh
+                        </p>
                     </div>
-
-                    <form action="backend.php">
+                    
+                    <!-- <form action="backend.php">
                         <div class="row pb-4">
                             <div class="col">
                                 <input type="text" class="form-control inner-form" placeholder="Your Name">
@@ -454,7 +462,7 @@
                                 </button>
                             </div>
                         </div>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </div>
@@ -474,24 +482,29 @@
                     <div class="row pb-4">
                         <div class="col text-center">
                             <div class="circleIcon">
-                                <i class="fa-brands fa-facebook-f"></i>
+                                <a href="https://www.facebook.com/skyline.sarwar" target="_blank"> 
+                                    <i class="fa-brands fa-facebook-f fa-fade"></i> </a>
                                 <!-- <i class="fab fa-facebook-f"></i> -->
                                 <!-- <i class="fa-brands fa-facebook-f fa-fade"></i> ANIMATION -->
                             </div>
 
                             <div class="circleIcon">
-                                <i class="fa-brands fa-linkedin-in"></i>
+                                <a href="https://www.linkedin.com/in/golam-ali-51221020a/" target="_blank">
+                                    <i class="fa-brands fa-linkedin-in fa-beat-fade"></i> </a>
+                                <!-- <i class="fa-brands fa-linkedin-in"></i> Normal -->
                             </div>
 
                             <div class="circleIcon">
-                                <i class="fa-brands fa-github"></i>
+                                <a href="https://github.com/Ali007G" target="_blank"> 
+                                    <i class="fa-brands fa-github fa-fade"></i> </a>
+                                    <!-- <i class="fa-brands fa-github"></i> ANIMATION -->
                             </div>
 
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col text-center">
+                        <div class="col text-center text-white">
                             <p>&copy; All Right Resered by Golam Ali</p>
                         </div>
                     </div>
