--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Young+Serif&display=swap"
         rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&family=Tilt+Neon&family=Young+Serif&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@100&family=Tilt+Neon&family=Young+Serif&display=swap"
+        rel="stylesheet">
 
 
     <link rel="stylesheet" href="/css/style.css">
@@ -92,13 +94,18 @@
                     <p style="text-shadow: 0 0 5px #000000; font-size: 20px;">Student, Flutter Developer</p>
 
                     <p>Hello, there.. This is Golam Ali. <br>
-                        Currently, I am pursuing my B.Sc. in Bangladesh Army International University of Science and Technology (BAIUST)
+                        Currently, I am pursuing my B.Sc. in Bangladesh Army International University of Science and
+                        Technology (BAIUST)
                     </p>
                     <p>
-                        Have experience in programming languages and solving problems. Also, participated in the MIST Independence Day Programming Contest, 2023. Completed Four months of internship(Communication) from Youth School for Social Entrepreneurs (YSSE).
+                        Have experience in programming languages and solving problems. Also, participated in the MIST
+                        Independence Day Programming Contest, 2023. Completed Four months of internship(Communication)
+                        from Youth School for Social Entrepreneurs (YSSE).
                     </p>
 
-                    <p>I'm passionate about creating beautiful, functional, and innovative mobile applications, and my favorite tool for this craft is Flutter. I'm on a mission to turn ideas into user-friendly and visually stunning mobile experiences.</p>
+                    <p>I'm passionate about creating beautiful, functional, and innovative mobile applications, and my
+                        favorite tool for this craft is Flutter. I'm on a mission to turn ideas into user-friendly and
+                        visually stunning mobile experiences.</p>
 
                     <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, error. Quod pariatur
                         consectetur quas officia dolorem quos veniam quam, eligendi ipsam doloremque, vel porro
@@ -137,14 +144,14 @@
                     <div class="card ml-3">
                         <div class="card-body">
                             <h5 class="education-text"> <b>
-                                Banglesh Army International University of Science and Technology (BAIUST).
+                                    Banglesh Army International University of Science and Technology (BAIUST).
                                 </b>
                             </h5>
-                                Cumilla, Bangladesh
-                                <br>
-                                Bachelor of Science in Computer Science and Engineering (B.Sc)
-                                <br>
-                                CGPA: 3.83
+                            Cumilla, Bangladesh
+                            <br>
+                            Bachelor of Science in Computer Science and Engineering (B.Sc)
+                            <br>
+                            CGPA: 3.83
                             <br>
                             <!-- <p class="education-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium molestias, dolor delectus eligendi!</p> -->
                         </div>
@@ -165,18 +172,18 @@
                     <div class="card ml-3">
                         <div class="card-body">
                             <h5 class="education-text"> <b>
-                                Cumilla Govt. College </b>
+                                    Cumilla Govt. College </b>
                             </h5>
-                                HSC <br>
-                                GPA:   <br>
-                                May, 2016 - June, 2019
-                                <br><br> 
+                            HSC <br>
+                            GPA: <br>
+                            May, 2016 - June, 2019
+                            <br><br>
                             <h5 class="education-text"> <b>
-                                Ibn Taimiya School and College </b> 
+                                    Ibn Taimiya School and College </b>
                             </h5>
-                                SSC: <br>
-                                GPA: <br>
-                                January, 2014 - April, 2016
+                            SSC: <br>
+                            GPA: <br>
+                            January, 2014 - April, 2016
 
                             <!-- <p class="education-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo debitis, voluptatem excepturi velit placeat beatae animi dolor quasi molestias expedita vitae minima tempora, eos optio ipsam voluptate nulla voluptatibus eligendi. Cum eius non amet ad dolore sapiente a, explicabo fugit, enim veritatis dolorem? Perferendis in laudantium molestias, dolor delectus eligendi!</p> -->
                         </div>
@@ -428,14 +435,25 @@
 
                 <div class="row pb-2">
                     <div class="col text-white">
-                        <h4>✔ Shoot a message & call...!!!</h4>
-                        <p> &#128231; alicsebaiust@gmail.com <br>
-                            &#128222; 01521-350574 <br>
-                            &#128222; 01623-630790 <br>
+
+                        <!-- <h4>✔ Shoot a message & call...!!!</h4>
+                        <p class="mycontact-text"> 
+                            &#128231; alicsebaiust@gmail.com <br>
+                            &#128222; 01521-350574 <br> 
+                            &#128222; 01623-630790 <br> 
                             &#127968; Cumilla, Bangladesh
-                        </p>
+                        </p> -->
+                        <h4>✔ Shoot a message & call...!!!</h4>
+                        <div class="mycontact-text">
+                            <div>&#128231; alicsebaiust@gmail.com</div>
+                            <div>&#128222; 01521-350574</div>
+                            <div>&#128222; 01623-630790</div>
+                            <div>&#127968; Cumilla, Bangladesh</div>
+                        </div>
+
+
                     </div>
-                    
+
                     <!-- <form action="backend.php">
                         <div class="row pb-4">
                             <div class="col">
@@ -482,7 +500,7 @@
                     <div class="row pb-4">
                         <div class="col text-center">
                             <div class="circleIcon">
-                                <a href="https://www.facebook.com/skyline.sarwar" target="_blank"> 
+                                <a href="https://www.facebook.com/skyline.sarwar" target="_blank">
                                     <i class="fa-brands fa-facebook-f fa-fade"></i> </a>
                                 <!-- <i class="fab fa-facebook-f"></i> -->
                                 <!-- <i class="fa-brands fa-facebook-f fa-fade"></i> ANIMATION -->
@@ -495,9 +513,9 @@
                             </div>
 
                             <div class="circleIcon">
-                                <a href="https://github.com/Ali007G" target="_blank"> 
+                                <a href="https://github.com/Ali007G" target="_blank">
                                     <i class="fa-brands fa-github fa-fade"></i> </a>
-                                    <!-- <i class="fa-brands fa-github"></i> ANIMATION -->
+                                <!-- <i class="fa-brands fa-github"></i> ANIMATION -->
                             </div>
 
                         </div>
