--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
                 </div>
             </div>
             <!-- <p class="about-container">1</p> -->
+            <div class="row pb-4">
+                <div class="col">
+                    <button class="btn btn-danger py-2 text-white">
+                        <a href=""></a>
+                        Download CV
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -445,7 +453,7 @@
                         </p> -->
                         <h4>✔ Shoot a message & call...!!!</h4>
                         <div class="mycontact-text">
-                            <div>&#128231; alicsebaiust@gmail.com</div>
+                            <div>&#128231; alicsebaiust01@gmail.com</div>
                             <div>&#128222; 01521-350574</div>
                             <div>&#128222; 01623-630790</div>
                             <div>&#127968; Cumilla, Bangladesh</div>
